test_regress/t/t_covergroup_autobins_bad.out
%Error: t/t_covergroup_autobins_bad.v:17:12: Automatic bins array size must be a constant
                                           : ... note: In instance 't'
   17 |       bins auto[size_var];
      |            ^~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_covergroup_autobins_bad.v:24:12: Automatic bins array size must be >= 1, got 0
                                           : ... note: In instance 't'
   24 |       bins auto[0];
      |            ^~~~
%Error: t/t_covergroup_autobins_bad.v:31:12: Automatic bins array size of 1001 exceeds limit of 1000
                                           : ... note: In instance 't'
   31 |       bins auto[1001];
      |            ^~~~
%Error: t/t_covergroup_autobins_bad.v:43:26: Non-constant expression in bin value list; values must be constants
                                           : ... note: In instance 't'
   43 |       ignore_bins ign = {size_var};       
      |                          ^~~~~~~~
%Error: t/t_covergroup_autobins_bad.v:44:32: Non-constant expression in bin range; range bounds must be constants
                                           : ... note: In instance 't'
   44 |       ignore_bins ign_range = {[0:size_var]};   
      |                                ^
%Error: t/t_covergroup_autobins_bad.v:38:12: Non-constant expression in array bins range; range bounds must be constants
                                           : ... note: In instance 't'
   38 |       bins b[] = {[size_var:size_var]};   
      |            ^
%Error: t/t_covergroup_autobins_bad.v:39:12: Non-constant expression in array bins range; range bounds must be constants
                                           : ... note: In instance 't'
   39 |       bins b_mixed[] = {[0:size_var]};    
      |            ^~~~~~~
%Error: t/t_covergroup_autobins_bad.v:40:23: Non-constant expression in bin range; range bounds must be constants
                                           : ... note: In instance 't'
   40 |       bins b_range = {[size_var:4]};      
      |                       ^
%Error: t/t_covergroup_autobins_bad.v:41:24: Non-constant expression in bin range; range bounds must be constants
                                           : ... note: In instance 't'
   41 |       bins b_range2 = {[0:size_var]};     
      |                        ^
%Error: t/t_covergroup_autobins_bad.v:42:18: Non-constant expression in bin range; values must be constants
                                           : ... note: In instance 't'
   42 |       bins b2 = {size_var};               
      |                  ^~~~~~~~
%Error: t/t_covergroup_autobins_bad.v:43:26: Non-constant expression in bin range; values must be constants
                                           : ... note: In instance 't'
   43 |       ignore_bins ign = {size_var};       
      |                          ^~~~~~~~
%Error: t/t_covergroup_autobins_bad.v:51:25: option.at_least must be a constant expression
                                           : ... note: In instance 't'
   51 |       option.at_least = size_var;   
      |                         ^~~~~~~~
%Error: Exiting due to
